Cambios en el form

--- a/index.html
+++ b/index.html
@@ -25,11 +25,11 @@
             <div class="row">
               <div class="input-field col s6">
                 <input placeholder="Escribe tu nombre" id="nombre" type="text" class="validate">
-                <label for="first_name">First Name</label>
+                <label for="first_name">User Name</label>
               </div>
               <div class="input-field col s6">
-                <input placeholder="Escribe tu apellido" id="apellido" type="text" class="validate">
-                <label for="last_name">Last Name</label>
+                <input placeholder="Escribe tu email" id="mail" type="email" class="validate">
+                <label for="last_name">E-mail</label>
               </div>
             </div>
             <div class="row">
